Fixed bug #33558 (warning with nested calls to functions returning by reference)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@190865 c90b9560-bf6c-de11-be94-00142212c4b1